Try to fix job_deploy in CI

--- a/.github/workflows/deploy-workflow.yml
+++ b/.github/workflows/deploy-workflow.yml
@@ -1,12 +1,9 @@
 name: Deploy on PyPi
 
 on:
-  workflow_run:
-    workflows: ["Code check"]
-    branches: [master]
-    tags: '*'
-    types: 
-      - completed
+  create:
+    tags:
+      - '*'
 
 jobs:
   job_deploy:
@@ -32,12 +29,14 @@ jobs:
           echo $SOURCE_NAME
           echo $SOURCE_BRANCH
           echo $SOURCE_TAG
-          if [ $(python setup.py --version) == $SOURCE_TAG ]; then exit 0 else exit 1; fi
+          VERSION=$(python3 setup.py --version)
+          echo $VERSION
+          if [ VERSION == $SOURCE_TAG ]; then exit 0 else exit 1; fi
 
         env:
-          SOURCE_NAME: ${{ steps.branch_name.outputs.SOURCE_NAME }}
-          SOURCE_BRANCH: ${{ steps.branch_name.outputs.SOURCE_BRANCH }}
-          SOURCE_TAG: ${{ steps.branch_name.outputs.SOURCE_TAG }}
+          SOURCE_NAME: ${{ steps.branch_info.outputs.SOURCE_NAME }}
+          SOURCE_BRANCH: ${{ steps.branch_info.outputs.SOURCE_BRANCH }}
+          SOURCE_TAG: ${{ steps.branch_info.outputs.SOURCE_TAG }}
 
       - name: Install dependencies
         run: |
