Fix enable lint of docstrings

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,6 @@
 [pylint]
 extension-pkg-whitelist=hid
-disable = C0114,  # missing-module-docstring
-          C0115,  # missing-class-docstring
-          C0116,  # missing-function-docstring
-          C0103,  # invalid-name
+disable = C0103,  # invalid-name
           R0801,  # duplicate-code
           R0913   # too-many-arguments
 
