[update] Package installation moved to pure declarative + setuptools_scm to infer current version from latest tag

--- a/.gitignore
+++ b/.gitignore
@@ -166,6 +166,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+__version__.py
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
