--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ build-backend = "setuptools.build_meta"
 
 [tool.setuptools_scm]
 write_to = "ledgercomm/__version__.py"
+local_scheme = "no-local-version"
 
 [tool.mypy]
 ignore_missing_imports = true
