--- a/.github/workflows/python-fast-checks.yml
+++ b/.github/workflows/python-fast-checks.yml
@@ -7,11 +7,9 @@ on:
       - '*'
     branches:
       - master
-      - develop
   pull_request:
     branches:
       - master
-      - develop
 
 jobs:
   lint:
@@ -115,10 +113,7 @@ jobs:
           fi
 
       - name: Publish Python package on test.pypi.org
-        if: |
-          success() &&
-          github.event_name == 'push' &&
-          !startsWith(github.ref, 'refs/tags/')
+        if: success() && github.event_name == 'push'
         run: python -m twine upload --repository testpypi dist/*
         env:
           TWINE_USERNAME: __token__
@@ -127,9 +122,7 @@ jobs:
 
       - name: Publish Python package on pypi.org
         if: |
-          success() &&
-          github.event_name == 'push' &&
-          startsWith(github.ref, 'refs/tags/')
+          success() && github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
         run: python -m twine upload dist/*
         env:
           TWINE_USERNAME: __token__
