--- a/.github/workflows/python-fast-checks.yml
+++ b/.github/workflows/python-fast-checks.yml
@@ -89,17 +89,6 @@ jobs:
           twine check dist/*
           echo "TAG_VERSION=$(python -c 'from ledgercomm import __version__; print(__version__)')" >> "$GITHUB_ENV"
 
-      - name: Display current status
-        run: |
-          echo "Current status is:"
-          if [[ ${{ github.ref }} == "refs/tags/"* ]]; \
-          then \
-              echo "- Triggered from tag, will be deployed on pypi.org"; \
-          else \
-              echo "- Not triggered from tag, will be deployed on test.pypi.org"; \
-          fi
-          echo "- Tag version: ${{ env.TAG_VERSION }}"
-
       - name: Check version against CHANGELOG
         if: startsWith(github.ref, 'refs/tags/')
         run: |
@@ -112,17 +101,8 @@ jobs:
               exit 1; \
           fi
 
-      - name: Publish Python package on test.pypi.org
+      - name: Publish Python package
         if: success() && github.event_name == 'push'
-        run: python -m twine upload --repository testpypi dist/*
-        env:
-          TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.TEST_PYPI_PUBLIC_API_TOKEN  }}
-          TWINE_NON_INTERACTIVE: 1
-
-      - name: Publish Python package on pypi.org
-        if: |
-          success() && github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
         run: python -m twine upload dist/*
         env:
           TWINE_USERNAME: __token__
@@ -130,10 +110,7 @@ jobs:
           TWINE_NON_INTERACTIVE: 1
 
       - name: Publish a release on the repo
-        if: |
-          success() &&
-          github.event_name == 'push' &&
-          startsWith(github.ref, 'refs/tags/')
+        if: success() && github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
         uses: "marvinpinto/action-automatic-releases@latest"
         with:
           automatic_release_tag: "v${{ env.TAG_VERSION }}"
