--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = ledgercomm
 author = Ledger
 author_email = hello@ledger.fr
-description = Library to communicate with Ledger Nano S/X and Speculos
+description = Library to communicate with Ledger Nano S/S+/X, Stax, Flex and Speculos
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/LedgerHQ/ledgercomm
@@ -12,8 +12,13 @@ classifiers =
     Development Status :: 5 - Production/Stable
     Environment :: Console
     License :: OSI Approved :: MIT License
+    Programming Language :: Python :: 3
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
+    Programming Language :: Python :: 3.13
     Operating System :: POSIX
 
 [options]
