--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,7 @@ jobs:
           echo "TAG_VERSION=$(python -c 'from ledgercomm import __version__; print(__version__)')" >> "$GITHUB_ENV"
 
       - name: Check version against CHANGELOG
-        if: startsWith(github.ref, 'refs/tags/')
+        if: success() && github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
         run: |
           CHANGELOG_VERSION=$(grep -Po '(?<=## \[)(\d+\.)+[^\]]' CHANGELOG.md | head -n 1)
           if [ "${{ env.TAG_VERSION }}" == "${CHANGELOG_VERSION}" ]; \
@@ -67,7 +67,7 @@ jobs:
           fi
 
       - name: Publish Python package
-        if: success() && github.event_name == 'push'
+        if: success() && github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
         run: python -m twine upload dist/*
         env:
           TWINE_USERNAME: __token__
@@ -75,13 +75,13 @@ jobs:
           TWINE_NON_INTERACTIVE: 1
 
       - name: Login to Ledger Artifactory
-        if: success() && github.event_name == 'push'
+        if: success() && github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
         timeout-minutes: 10
         id: jfrog-login
         uses: LedgerHQ/actions-security/actions/jfrog-login@actions/jfrog-login-1
 
       - name: Publish Python package on Ledger Artifactory
-        if: success() && github.event_name == 'push'
+        if: success() && github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
         run: python -m twine upload dist/*
         env:
           TWINE_REPOSITORY_URL: https://jfrog.ledgerlabs.net/artifactory/api/pypi/embedded-apps-pypi-prod-green
@@ -90,14 +90,14 @@ jobs:
           TWINE_NON_INTERACTIVE: 1
 
       - name: Generate library build attestations
-        if: success() && github.event_name == 'push'
+        if: success() && github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
         timeout-minutes: 10
         uses: LedgerHQ/actions-security/actions/attest@actions/attest-1
         with:
           subject-path: dist/*
 
       - name: Sign library artifacts
-        if: success() && github.event_name == 'push'
+        if: success() && github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
         timeout-minutes: 10
         uses: LedgerHQ/actions-security/actions/sign-blob@actions/sign-blob-1
         with:
